Added proper CSS to hobbies page and made it fixed-width as per project requirements

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ body {
   background-color: #CEF
 }
 
+div#fixed-width {
+  width:1920px;
+}
+
 nav {
   background-color: #07C;
   position: relative;
